--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -1,13 +1,13 @@
 /* color */
 $cblack:         #000;
-$cwhite:         #fff;
-$cgray-base:     #ccc;
+$cwhite:         #FFF;
+$cgray-base:     #CCC;
 $cgray-light:    #f9f9f9;
-$cbackgroud:    #FCFAF2;
+$cbackgroud:    #FFFFFD;
 $cfont:         #1c1c1c;
 $cfont-focus:   #8E354A;
 $ctag-backgroud:        #D7C4BB;
 $ctag-color:    #8E354A;
-$carticle-backgroud:    #FCFAF2;
+$carticle-btn:  #F6F6F4;
 
 $sfont-title:   16px;
