--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -3,7 +3,7 @@
 }
 
 .t-nav-brand {
-    background: url("/dist/img/logo.png") no-repeat center;
+    background: $cwhite url("/dist/img/logo.png") no-repeat center;
     background-size: contain;
 }
 
