--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,36 +1,9 @@
 .t-rtcl-lstbx {
-    position:relative;
-    display: inline-block;
-    background: -webkit-gradient(linear, 0% 20%, 0% 1000%, from($cwhite), to($cwhite), color-stop(.1,$cbackgroud));
-    border: 1px solid $cgray-base;
-    -webkit-box-shadow: 0 3px 30px rgba(0, 0, 0, 0.1) inset;
-    -webkit-border-bottom-right-radius: 6px 50px;
-}
-
-.t-rtcl-lstbx:before{
-    content: '';
-    width: 50px;
-    height: 100px;
-    position:absolute;
-    bottom:0; right:0;
-    -webkit-box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.1);
-    z-index:-1;
-    -webkit-transform: translate(-35px,-40px)
-    skew(0deg,30deg)
-    rotate(-25deg);
-}
-.t-rtcl-lstbx:after{
-    content: '';
-    width: 100px;
-    height: 100px;
-    top:0; left:0;
-    position:absolute;
-    display: inline-block;
-    z-index:-1;
-    -webkit-box-shadow: -10px -10px 10px rgba(0, 0, 0, 0.2);
-    -webkit-transform: rotate(2deg)
-    translate(20px,25px)
-    skew(20deg);
+    background-color: $cbackgroud;
+    border: 30px solid transparent;
+    -webkit-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Safari 5 */
+    -o-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Opera */
+    border-image:url("/dist/img/flower-border.png") 66 66 round;
 }
 
 .tar-article-list {
