--- a/resources/assets/sass/article/index.scss
+++ b/resources/assets/sass/article/index.scss
@@ -23,8 +23,8 @@
 .tar-article-box {
     background-color: $cbackgroud;
     border: 30px solid transparent;
-    -webkit-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Safari 5 */
-    -o-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Opera */
+    //-webkit-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Safari 5 */
+    //-o-border-image:url("/dist/img/flower-border.png") 66 66 round; /* Opera */
     border-image:url("/dist/img/flower-border.png") 66 66 round;
 
     .t-rtcl-ttl {
