--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,4 +1,4 @@
-.t-rtcl-lstbx {
+.tar-article-box {
     background-color: $cbackgroud;
     border: 30px solid transparent;
     border-image: url("/dist/img/flower-border.png") 66 66 round;
