--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -12,12 +12,18 @@
     .tar-article-info {
         margin-bottom: 10px;
 
+        img {
+            width: 100%;
+        }
+
         .tar-article-extra {
             color: $cgray-base;
         }
     }
 
     .tar-article-list-decs {
+        margin-top: 20px;
+        min-height: 130px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
