--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -9,27 +9,25 @@
     border-left: none;
     border-right: none;
 
-    .tar-article-info {
-        margin-bottom: 10px;
+    .tar-article-extra {
+        color: $cgray-base;
+    }
 
+    .tar-article-info {
         img {
             width: 100%;
-        }
-
-        .tar-article-extra {
-            color: $cgray-base;
         }
     }
 
     .tar-article-list-decs {
-        margin-top: 20px;
-        min-height: 130px;
+        margin-top: 3px;
+        height: 163px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 3;
+        -webkit-line-clamp: 7;
     }
 
     .t-rtcl-tag {
