--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,5 +1,8 @@
 .tar-article-box {
     background-color: $cbackgroud;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 960px;
 }
 
 .tar-article-list {
@@ -21,13 +24,13 @@
 
     .tar-article-list-decs {
         margin-top: 3px;
-        height: 163px;
+        height: 118px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 7;
+        -webkit-line-clamp: 6;
     }
 
     .t-rtcl-tag {
