article-tag-style

--- a/resources/assets/sass/article/index.scss
+++ b/resources/assets/sass/article/index.scss
@@ -55,6 +55,13 @@
             margin: 1rem auto;
         }
     }
+
+    .t-rtcl-tag {
+        margin-top: 10px;
+        max-width: 750px;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 @import "list";
