--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -24,7 +24,7 @@
 
     .tar-article-list-decs {
         margin-top: 3px;
-        height: 111px;
+        min-height: 98px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
@@ -34,7 +34,7 @@
     }
 
     .t-rtcl-tag {
-        margin-top: 10px;
+        margin-top: 21px;
     }
 }
 
