上传图片进度遮罩样式调整

--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -30,6 +30,12 @@
             }
         }
 
+        .simditor-image-loading {
+            > .progress {
+                margin-bottom: 0;
+            }
+        }
+
     }
 }
 
