--- a/resources/assets/sass/control/index.scss
+++ b/resources/assets/sass/control/index.scss
@@ -1,60 +1,12 @@
+@import "_nav";
+@import "_top";
+@import "_todo";
+@import "_setting";
+@import "_article";
+@import "_trash";
+
 body {
     height: 100%;
-}
-
-// 控制面板左侧导航栏
-.tar-cp-nav {
-    background-color: #333;
-    max-width: 150px;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    position: fixed;
-    z-index: 11;
-
-
-    img {
-        width: 60px;
-    }
-
-    ul {
-        background-color: #333;
-
-        li {
-            background-color: #333;
-            border: 0;
-            text-align: center;
-
-            span {
-                font-size: 2em;
-            }
-        }
-
-        .tar-avatar {
-            padding-left: 0;
-            padding-right: 0;
-        }
-    }
-}
-
-// 控制面板顶部
-.tar-cp-top {
-    font-size: 0.8em;
-
-    ul {
-        margin-bottom: 0;
-
-        li {
-            padding: 0;
-            margin-right: 5px;
-            border: 0;
-
-            a {
-                color: #777;
-                text-decoration: none;
-            }
-        }
-    }
 }
 
 // 控制面板子导航
@@ -77,8 +29,3 @@ body {
 .no-resize {
     resize: none;
 }
-
-@import "todo";
-@import "setting";
-@import "article";
-@import "trash";
