home-slider-nav

--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -6,7 +6,9 @@
     background-color: $cbackgroud;
     font-weight: 700;
     width: 300px;
-    margin: 30px auto;
+    margin: 20px auto;
+    height: 20px;
+    line-height: 0;
 }
 
 .t-index-pltbox {
