--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -1,15 +1,6 @@
 @import "../../../../node_modules/swiper/dist/css/swiper.min";
 @import "slider";
 
-// 隐藏下载按钮
-audio::-webkit-media-controls {
-    overflow: hidden !important
-}
-audio::-webkit-media-controls-enclosure {
-    width: calc(100% + 32px);
-    margin-left: auto;
-}
-
 .t-index-plttl {
     color: $cfont-focus;
     background-color: $cbackgroud;
@@ -22,6 +13,8 @@ audio::-webkit-media-controls-enclosure {
 
 .t-index-pltbox {
     background-color: $cbackgroud;
+    margin: 0 auto;
+    max-width: 750px;
     padding-bottom: 10px;
     border-radius: 4px;
 
@@ -39,6 +32,7 @@ audio::-webkit-media-controls-enclosure {
         height: 500px;
         padding: 30px;
         border-radius: 2px;
+        overflow: hidden;
     }
 }
 
