--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -51,3 +51,9 @@
     border-radius: 0;
     border-bottom: none;
 }
+
+.t-rtcl-links {
+    max-width: 960px;
+    margin: auto;
+    padding: 0 5px;
+}
