--- a/resources/assets/sass/control/_setting.scss
+++ b/resources/assets/sass/control/_setting.scss
@@ -44,7 +44,7 @@
     overflow: hidden;
     cursor: default;
     text-align: center;
-    background: url("http://static.targaryen.top/default-image.png?imageView2/1/w/504/h/210") no-repeat;
+    background: url("https://statics.targaryen.top/default-image.png?imageView2/1/w/504/h/210") no-repeat;
     background-size: 100%!important;
     width: 36em;
     height: 15em;
