--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -45,13 +45,11 @@
         min-height: 189px;
     }
 
-    .caption {
-        p {
-            height: 32px;
-            word-break: break-all;
-            word-wrap: break-word;
-            -webkit-line-clamp: 2;
-        }
+    .t-index-ntttl {
+        height: 32px;
+        word-break: break-all;
+        word-wrap: break-word;
+        -webkit-line-clamp: 2;
     }
 
     .t-index-ntdesc {
