banner-delete-settop

--- a/resources/assets/sass/control/_setting.scss
+++ b/resources/assets/sass/control/_setting.scss
@@ -24,6 +24,10 @@
                 filter: Alpha(opacity=100);
             }
         }
+
+        .t-ctl-btg {
+            color: #337ab7;
+        }
     }
 }
 
