--- a/resources/assets/sass/themes/index.scss
+++ b/resources/assets/sass/themes/index.scss
@@ -1,4 +1,6 @@
 @import "variables";
+@import "normalize";
+@import "type";
 @import "navbar";
 @import "panels";
 @import "scaffolding";
@@ -7,6 +9,5 @@
 @import "list-group";
 @import "input-groups";
 @import "pagination";
-@import "normalize";
 @import "labels";
 @import "thumbnails";
