--- a/resources/assets/sass/themes/_buttons.scss
+++ b/resources/assets/sass/themes/_buttons.scss
@@ -1,3 +1,6 @@
 .btn {
-
+    font-family: 苹方-简, "Pingfang SC", 冬青黑体简体中文, HiraginoSansGB, 黑体-简, 微软雅黑, "Helvetica Neue", "Droid Sans", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    line-height: 24px;
+    color: rgb(74, 74, 74);
 }
