--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -1,13 +1,13 @@
 /* color */
 $cblack:         #000;
-$cwhite:         #FFF;
-$cgray-base:     #CCC;
+$cwhite:         #fff;
+$cgray-base:     #ccc;
 $cgray-light:    #f9f9f9;
-$cbackgroud:    #FFFFFD;
-$cfont:         #1c1c1c;
-$cfont-focus:   #8E354A;
-$ctag-backgroud:        #D7C4BB;
-$ctag-color:    #8E354A;
-$carticle-btn:  #F6F6F4;
+$cbackgroud:    #fffffd;
+$cfont:         #4a4a4a;
+$cfont-focus:   #8e354a;
+$ctag-backgroud:        #d7c4bb;
+$ctag-color:    #8e354a;
+$carticle-btn:  #f6f6f4;
 
 $sfont-title:   16px;
