--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -1,16 +1,45 @@
 .tar-article-box {
-    background-color: $cbackgroud;
     margin-left: auto;
     margin-right: auto;
     max-width: 960px;
+
+    .t-rtcl-ttl {
+        font-weight: 400;
+        font-size: $sfont-title;
+    }
+
+    hr {
+        margin: 10px auto;
+        float: none;
+        max-width: 900px;
+    }
+
+    .tar-article-time {
+        color: $cgray-base;
+        margin-bottom: 8px;
+    }
+
+    .article-content {
+        width: 100%;
+        max-width: 750px;
+        margin-left: auto;
+        margin-right: auto;
+        overflow: hidden;
+        word-wrap: break-word;
+        word-break: normal;
+
+        img {
+            max-width: 100%;
+            margin: 1rem auto;
+        }
+    }
 }
 
 .tar-article-list {
     min-height: 100px;
     border-radius: 0;
     background-color: transparent;
-    border-left: none;
-    border-right: none;
+    border: none;
 
     .tar-article-extra {
         color: $cgray-base;
@@ -23,22 +52,18 @@
     }
 
     .tar-article-list-decs {
-        margin-top: 3px;
-        height: 98px;
+        margin-top: 10px;
+        height: 190px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
         display: -webkit-box;
         -webkit-box-orient: vertical;
-        -webkit-line-clamp: 5;
+        -webkit-line-clamp: 8;
     }
 
     .tar-article-list-decs:after {
         content: '...';
-    }
-
-    .t-rtcl-tag {
-        margin-top: 21px;
     }
 }
 
