--- a/resources/assets/sass/themes/_normalize.scss
+++ b/resources/assets/sass/themes/_normalize.scss
@@ -3,7 +3,7 @@ body {
     font-family: 苹方-简, "Pingfang SC", 冬青黑体简体中文, HiraginoSansGB, 黑体-简, 微软雅黑, "Helvetica Neue", "Droid Sans", Helvetica, Arial, sans-serif;
     font-weight: 300;
     line-height: 24px;
-    color: rgb(74, 74, 74);
+    color: $cfont;
     padding: 0;
 }
 
