--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -2,6 +2,10 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 960px;
+    background-color: $cwhite;
+    padding: 30px;
+    margin-bottom: 30px;
+    min-height: 500px;
 
     .t-rtcl-ttl {
         margin-bottom: 20px;
