--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -30,6 +30,7 @@
 
 .t-index-pht {
     overflow: hidden;
+    padding-top: 1px;
 
     a > img {
         width: 100%;
@@ -39,6 +40,7 @@
 
 .t-index-nt {
     overflow: hidden;
+    padding-top: 1px;
 
     a > img {
         width: 100%;
