--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -2,13 +2,14 @@
 @import "slider";
 
 .t-index-plttl {
-    color: $cfont-focus;
-    background-color: $cbackgroud;
+    color: $cfont;
     font-weight: 400;
-    width: 300px;
-    margin: 20px auto;
-    height: 20px;
-    line-height: 0;
+    margin-bottom: 20px;
+    height: 60px;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .t-index-pltbox {
