--- a/resources/assets/sass/common/nav.scss
+++ b/resources/assets/sass/common/nav.scss
@@ -7,15 +7,29 @@
     background-size: contain;
 }
 
-.navbar-default .navbar-nav {
-    > .open > .tar-go {
-        &,
-        &:hover,
-        &:focus,
-        &:active,
-        &:visited {
-            color: $cblack;
-            background-color: transparent;
+.navbar-default {
+    .navbar-nav {
+        > .open > .tar-go {
+            &,
+            &:hover,
+            &:focus,
+            &:active,
+            &:visited {
+                color: $cblack;
+                background-color: transparent;
+            }
+        }
+    }
+
+    .t-nav-btn {
+        position: relative;
+        height: 50px;
+        line-height: 56px;
+        margin: auto 15px;
+        background-color: transparent;
+
+        .glyphicon {
+            font-size: 18px;
         }
     }
 }
