--- a/resources/assets/sass/themes/_normalize.scss
+++ b/resources/assets/sass/themes/_normalize.scss
@@ -3,7 +3,7 @@ body {
     font-weight: 300;
     line-height: 24px;
     color: $cfont;
-    padding: 0;
+    padding: 70px 0 0;
     background-color: $cgray-light;
 }
 
