--- a/resources/assets/sass/article/list.scss
+++ b/resources/assets/sass/article/list.scss
@@ -29,7 +29,7 @@
 
     .tar-article-list-decs {
         margin-top: 10px;
-        height: 190px;
+        max-height: 190px;
         word-break: break-all;
         word-wrap: break-word;
         overflow: hidden;
