--- a/resources/assets/sass/themes/_normalize.scss
+++ b/resources/assets/sass/themes/_normalize.scss
@@ -1,10 +1,14 @@
-body {
+html, body {
     font-family: 苹方-简, "Pingfang SC", 冬青黑体简体中文, HiraginoSansGB, 黑体-简, 微软雅黑, "Helvetica Neue", "Droid Sans", Helvetica, Arial, sans-serif;
     font-weight: 300;
     line-height: 24px;
     color: $cfont;
-    padding: 70px 0 0;
+    height: 100%;
     background-color: $cgray-light;
+}
+
+body {
+    padding-top: 70px;
 }
 
 a {
