--- a/resources/assets/sass/themes/_normalize.scss
+++ b/resources/assets/sass/themes/_normalize.scss
@@ -4,7 +4,7 @@ html, body {
     line-height: 24px;
     color: $cfont;
     height: 100%;
-    background-color: $cgray-light;
+    background-color: $cbackgroud;
 }
 
 body {
