--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -3,7 +3,7 @@ $cblack:         #000;
 $cwhite:         #fff;
 $cgray-base:     #ccc;
 $cgray-light:    #f9f9f9;
-$cbackgroud:    #fffffd;
+$cbackgroud:    #f9f9f9;
 $cfont:         #4a4a4a;
 $cfont-focus:   #8e354a;
 $ctag-backgroud:        #d7c4bb;
