--- a/resources/assets/sass/themes/_navbar.scss
+++ b/resources/assets/sass/themes/_navbar.scss
@@ -1,5 +1,5 @@
 .navbar-default {
-    background-color: $cbackgroud;
+    background-color: $cwhite;
     border-bottom: solid 1px $cfont-focus;
 
     .navbar-nav {
