bug-fixed-img-fullscreen

--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -45,6 +45,10 @@ input, textarea:focus {
     z-index: 1;
 }
 
+.t-overflowy-hidden {
+    overflow-y: hidden;
+}
+
 @import "dialog";
 @import "simditor";
 @import "nav";
