--- a/resources/assets/sass/control/_nav.scss
+++ b/resources/assets/sass/control/_nav.scss
@@ -22,11 +22,7 @@
             text-align: center;
 
             span {
-                font-size: 2em;
-            }
-
-            .glyphicon-calendar {
-                padding-left: 2px;
+                font-size: 28px;
             }
 
             .glyphicon-list-alt {
