--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -15,7 +15,7 @@
 .t-index-pltbox {
     background-color: $cbackgroud;
     margin: 0 auto;
-    max-width: 750px;
+    max-width: $max-width;
     padding-bottom: 10px;
     border-radius: 4px;
 
