--- a/resources/assets/sass/themes/_variables.scss
+++ b/resources/assets/sass/themes/_variables.scss
@@ -4,7 +4,7 @@ $cwhite:         #fff;
 $cgray-base:     #ccc;
 $cgray-light:    #f9f9f9;
 $cbackgroud:    #f9f9f9;
-$cfont:         #4a4a4a;
+$cfont:         #353535;
 $cfont-focus:   #8e354a;
 $ctag-backgroud:        #d7c4bb;
 $ctag-color:    #8e354a;
@@ -13,3 +13,5 @@ $carticle-btn:  #f6f6f4;
 $sfont-title:   16px;
 
 $box-shadow: 0 0 1px 0 $cgray-base;
+
+$max-width: 750px;
