--- a/resources/assets/sass/article/form.scss
+++ b/resources/assets/sass/article/form.scss
@@ -12,7 +12,7 @@
         }
 
         .simditor-body {
-            max-width: 750px;
+            max-width: $max-width;
             min-height: 450px;
             font-size: 14px;
             margin-left: auto;
@@ -21,7 +21,7 @@
         }
 
         .markdown-editor {
-            max-width: 750px;
+            max-width: $max-width;
             margin-left: auto;
             margin-right: auto;
 
