--- a/resources/assets/sass/article/show.scss
+++ b/resources/assets/sass/article/show.scss
@@ -16,7 +16,7 @@
 
     .article-content {
         width: 100%;
-        max-width: 750px;
+        max-width: $max-width;
         margin-left: auto;
         margin-right: auto;
         overflow: hidden;
@@ -33,6 +33,14 @@
                 cursor: pointer;
             }
         }
+    }
+
+    footer {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: $max-width;
+        color: $cgray-base;
     }
 }
 
