--- a/resources/assets/sass/control/index.scss
+++ b/resources/assets/sass/control/index.scss
@@ -27,6 +27,19 @@ body {
     }
 }
 
+.tar-error {
+    position: fixed;
+    top: 70px;
+    right: 30px;
+    z-index: 10;
+
+    ul {
+        li {
+            list-style: none;
+        }
+    }
+}
+
 .no-resize {
     resize: none;
 }
