--- a/resources/assets/sass/control/_todo.scss
+++ b/resources/assets/sass/control/_todo.scss
@@ -6,6 +6,7 @@
     border-radius: 4px;
     display: none;
 
+    .t-td-content,
     .tar-todo-content {
         width: 100% !important;
         white-space: nowrap;
