--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -17,6 +17,12 @@ input, textarea:focus {
             list-style: none;
         }
     }
+
+    .fade-out {
+        visibility: hidden;
+        opacity: 0;
+        transition: all 1s linear;
+    }
 }
 
 .tar-ul-nomargin {
