--- a/resources/assets/sass/home/index.scss
+++ b/resources/assets/sass/home/index.scss
@@ -71,10 +71,6 @@
     }
 }
 
-.t-index-cdcontent {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 500px;
-    flex-direction:column;
+.t-index-handicraft {
+    background-color: #8e354a;
 }
